# sparkle

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: coverage.yml  main.yml
sparkle-core/: Cargo.toml
sparkle-ristretto255/: Cargo.toml
sparkle-spec/: .#Cargo.toml  Cargo.toml
