[package]
name = "sparkle-core"
version = "0.1.0"
edition = "2021"
authors = ["Deirdre Connolly <durumcrustulum@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/selkie-cryptography/sparkle"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "threshold", "signature", "schnorr"]
description = "Types and traits to support implementing Sparkle, a simple, adaptively secure, three-round Schnorr threshold signature scheme."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
byteorder = "1.4"
debugless-unwrap = "0.0.4"
derive-getters = "0.3.0"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.11.0"
rand_core = "0.6"
serde = { version = "1.0.160", features = ["derive"], optional = true }
serdect = { version = "0.2.0", optional = true }
thiserror = "1.0"
visibility = "0.0.1"
zeroize = { version = "1.5.4", default-features = false, features = ["derive"] }

# Test dependencies used with the test-impl feature
criterion = { version = "0.5", optional = true }
proptest = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
lazy_static = "1.4"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
nightly = []
default = []
internals = []
serde = ["dep:serde", "dep:serdect"]
# Exposes ciphersuite-generic tests for other crates to use
test-impl = ["proptest", "serde_json", "criterion"]

[lib]
bench = false
