[package]
name = "sparkle-spec"
version = "0.1.0"
edition = "2021"
authors = ["Deirdre Connolly <durumcrustulum@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/selkie-cryptography/sparkle"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "threshold", "signature", "schnorr", "hacspec"]
description = "
Formalized specification of Sparkle, a simple, adaptively secure, three-round
Schnorr threshold signature scheme, in hacspec.
"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
